sfdx-source/force-app/main/default/objects/Cassie_Setting__c/Cassie_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>LEM-16624: It is used to store Cassie related settings.</description>
    <label>Cassie Setting</label>
</CustomObject>