sfdx-source/force-app/main/default/objects/Cassie_Setting__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16624: It stores Base URL for Communication Preferences URL.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>