sfdx-source/force-app/main/default/objects/Cassie_Setting__c/fields/Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Key__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16624: It stores Encryption Key for Communication Preferences URL.</description>
    <label>Encryption Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>