sfdx-source/force-app/main/default/objects/Cassie_Setting__c/fields/GD_id__c.field-meta.xml
<CustomField>
    <fullName>GD_id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16624: It stores GD id for Communication Preferences URL.</description>
    <label>GD id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>