sfdx-source/force-app/main/default/objects/Cassie_Setting__c/fields/License_Id__c.field-meta.xml
<CustomField>
    <fullName>License_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16624: It stores License Id for Communication Preferences URL.</description>
    <label>License Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>