sfdx-source/force-app/main/default/objects/Cassie_Setting__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16624: It stores Persona for Communication Preferences URL.</description>
    <label>Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>